// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 2`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">和平区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 3`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">和平区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-num prop 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-top、columns-bottom slot 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->Top<div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>Bottom
  <!---->
</div>
`;

exports[`reset method 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">蓟县</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`reset method 2`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`title slot 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button>Custom Title<button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="zv-picker zv-area">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
